--- a/about.html
+++ b/about.html
@@ -48,15 +48,17 @@
     <!-- Spinner End -->
 
     <!-- Navigation Start -->
+
     <div class="navigation fixed-top custom-shadow d-flex justify-content-center align-items-center">
         <a href="index.html" class="navbar-brand d-flex align-items-center mb-2 mt-1"
             style="margin-right: 0px!important; margin-left: 13px!important;">
             <img src="img/mainlogo.png" width="70">
         </a>
         <ul>
-            <li class="list active">
+            <li class="list">
                 <a href="index.html">
                     <span class="icon">
+                        <!-- <ion-icon name="home-outline"></ion-icon> -->
                         <ion-icon name="home"></ion-icon>
                     </span>
                     <span class="text">Home</span>
@@ -66,6 +68,7 @@
             <li class="list">
                 <a href="syllabus.html">
                     <span class="icon">
+                        <!-- <ion-icon name="person-outline"></ion-icon> -->
                         <ion-icon name="document"></ion-icon>
                     </span>
                     <span class="text">Syllabus</span>
@@ -75,7 +78,9 @@
             <li class="list">
                 <a href="calender.html">
                     <span class="icon">
+                        <!-- <ion-icon name="chatbubble-outline"></ion-icon> -->
                         <ion-icon name="calendar-sharp"></ion-icon>
+
                     </span>
                     <span class="text">Calender</span>
                     <span class="circle"></span>
@@ -84,15 +89,17 @@
             <li class="list">
                 <a href="calculator.html">
                     <span class="icon">
+                        <!-- <ion-icon name="camera-outline"></ion-icon> -->
                         <ion-icon name="Calculator"></ion-icon>
                     </span>
                     <span class="text">Calculator</span>
                     <span class="circle"></span>
                 </a>
             </li>
-            <li class="list">
+            <li class="list active">
                 <a href="about.html">
                     <span class="icon">
+                        <!-- <ion-icon name="settings-outline"></ion-icon> -->
                         <ion-icon name="person"></ion-icon>
                     </span>
                     <span class="text">About</span>
@@ -117,8 +124,8 @@
         list.forEach((item) =>
             item.addEventListener('click', activeLink));
     </script>
-    <!-- Navigation End -->
 
+    <!-- Navigation End -->
 
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow fixed-top p-0 fonty">
@@ -130,72 +137,50 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index.html" class="nav-item nav-link active">Home</a>
+                <a href="index.html" class="nav-item nav-link">Home</a>
                 <a href="syllabus.html" class="nav-item nav-link">Syllabus</a>
                 <a href="calender.html" class="nav-item nav-link">Calender</a>
                 <a href="calculator.html" class="nav-item nav-link">Calculator</a>
-                <a href="about.html" class="nav-item nav-link">About</a>
+                <a href="about.html" class="nav-item nav-link active">About</a>
             </div>
         </div>
-    </nav>
-    <style>
-        .navbar-toggler-icon {
-            background-image: url(img/clipart1101213.png) !important;
-            height: 1.6em !important;
-            width: 1.6em !important;
-        }
+        <style>
+            .navbar-toggler-icon {
+                background-image: url(img/clipart1101213.png) !important;
+                height: 1.6em !important;
+                width: 1.6em !important;
+            }
 
-        .navbar-toggler {
-            border-color: rgba(255, 255, 255, 0) !important;
-        }
+            .navbar-toggler {
+                border-color: rgba(255, 255, 255, 0) !important;
+            }
 
-        .navbar-toggler:focus,
-        .navbar-toggler:active {
-            outline: none;
-            box-shadow: none;
-        }
-    </style>
+            .navbar-toggler:focus,
+            .navbar-toggler:active {
+                outline: none;
+                box-shadow: none;
+            }
+        </style>
+    </nav><br><br><br>
     <!-- Navbar End -->
 
-    <!-- Carousel Start -->
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-                aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="img/banner1.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="img/banner2.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="img/banner3.jpg" class="d-block w-100" alt="...">
+    <!-- Header Start -->
+    <div class="container-fluid bg-primary py-5 mb-5 page-header">
+        <div class="container py-5">
+            <div class="row justify-content-center">
+                <div class="col-lg-10 text-center">
+                    <h1 class="display-3 text-white animated slideInDown">About Us</h1>
+                </div>
             </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
     </div>
-    <!-- Carousel End -->
+    <!-- Header End -->
 
     <!-- Service Start -->
     <div class="container-xxl py-5 mt-5">
         <div class="container">
             <div class="row g-4">
-                <div class="col-lg-3 col-sm-6 col-6 wow fadeInUp" data-wow-delay="0.1s">
+                <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
                     <a href="syllabus.html">
                         <div class="service-item text-center pt-3">
                             <div class="p-4">
@@ -205,7 +190,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-3 col-sm-6 col-6 wow fadeInUp" data-wow-delay="0.5s">
+                <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
                     <a href="calender.html">
                         <div class="service-item text-center pt-3">
                             <div class="p-4">
@@ -215,7 +200,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-3 col-sm-6 col-6 wow fadeInUp" data-wow-delay="0.7s">
+                <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
                     <a href="calculator.html">
                         <div class="service-item text-center pt-3">
                             <div class="p-4">
@@ -225,7 +210,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-3 col-sm-6 col-6 wow fadeInUp" data-wow-delay="0.3s">
+                <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
                     <a href="about.html">
                         <div class="service-item text-center pt-3">
                             <div class="p-4">
@@ -246,100 +231,47 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s" style="min-height: 400px;">
                     <div class="position-relative h-100">
-                        <img class="img-fluid position-absolute w-100 h-100" src="img/pngwing.com (2).png" alt=""
+                        <img class="img-fluid position-absolute w-100 h-100" src="img/about.png" alt=""
                             style="object-fit: cover;">
                     </div>
                 </div>
-                <div class="col-lg-6 wow fadeInUp text-center" data-wow-delay="0.3s">
-                    <h1 class="mb-4 text-center">Welcome to Education</h1>
-                    <p class="text-justify fs-5">Education is the key that unlocks the doors to knowledge, opportunity,
-                        and personal growth. It is a lifelong journey that empowers individuals to discover their
-                        potential, cultivate their talents, and shape a brighter future. At its core, education is not
-                        just about acquiring facts and figures but fostering critical thinking, creativity, and empathy.
-                        It is the foundation upon which societies build progress, innovation, and lasting change.
-                        Explore, learn, and embrace the transformative power of education, for it is the compass that
-                        guides us toward a better world.</p>
-                </div>
-            </div>
-        </div><br><br>
-        <div class="container">
-            <div class="row g-5">
-                <div class="col-lg-6 wow fadeInUp text-center" data-wow-delay="0.3s">
-                    <h1 class="mb-4 text-center">Welcome to Learning</h1>
-                    <p class="text-justify fs-5">Education is the cornerstone of personal development and societal
-                        progress. It empowers individuals with knowledge and skills, fostering critical thinking,
-                        economic prosperity, and social mobility. Moreover, education cultivates informed citizens,
-                        drives innovation, promotes tolerance, and equips us to address global challenges. In an
-                        ever-changing world, education is not just a necessity; it's the key to individual empowerment
-                        and the foundation upon which we build a more inclusive, prosperous, and sustainable society.
-                    </p>
-                </div>
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s" style="min-height: 400px;">
-                    <div class="position-relative h-100">
-                        <img class="img-fluid position-absolute w-100 h-100" src="img/pngwing.com (1).png" alt=""
-                            style="object-fit: cover;">
+                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
+                    <h6 class="section-title bg-white text-start text-primary pe-3">About Us</h6>
+                    <h1 class="mb-4">Welcome to Education</h1>
+                    <p class='fs-5 text-justify'>Welcome to Education, where education meets innovation. Founded in
+                        2020, our mission is to provide an engaging learning environment that empowers individuals to
+                        thrive academically. Our team, comprised of experienced educators and passionate professionals,
+                        is dedicated to delivering high-quality courses that blend traditional knowledge with
+                        cutting-edge insights. With a commitment to excellence, we aim to inspire a love for learning
+                        and equip our learners with the skills they need for. Explore our diverse range of courses and
+                        join us on a journey of knowledge and growth.</p>
+                    <div class="row gy-2 gx-4 mb-4">
+                        <div class="col-sm-6">
+                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Skilled Instructors</p>
+                        </div>
+                        <div class="col-sm-6">
+                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Online Classes</p>
+                        </div>
+                        <div class="col-sm-6">
+                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>International Certificate
+                            </p>
+                        </div>
+                        <div class="col-sm-6">
+                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Skilled Instructors</p>
+                        </div>
+                        <div class="col-sm-6">
+                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Online Classes</p>
+                        </div>
+                        <div class="col-sm-6">
+                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>International Certificate
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <!-- About End -->
-
-    <!-- Education Start -->
-    <div class="container-xxl py-5 category">
-        <div class="container">
-            <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                <h1 class="mb-5">Educational Categories</h1>
-            </div>
-            <div class="container py-3">
-                <div class="custom-card-container">
-                    <div class="custom-card-item">
-                        <div class="card custom-card">
-                            <img src="img/cat-1.png" class="card-img-top custom-card-img" alt="Loading Failed">
-                            <div class="card-body custom-card-body">
-                                <p class="card-text text-justify">Structured and systematic, formal education takes
-                                    place in schools, colleges, and universities. It follows a set curriculum and leads
-                                    to certification or degrees, providing foundational knowledge and skills.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="custom-card-item">
-                        <div class="card custom-card">
-                            <img src="img/cat-2.png" class="card-img-top custom-card-img" alt="Loading Failed">
-                            <div class="card-body custom-card-body">
-                                <p class="card-text text-justify">Learning that occurs outside formal institutions,
-                                    informal education is unstructured and spontaneous. It includes skills and knowledge
-                                    acquired through daily experiences, social interactions, and self-directed
-                                    activities.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="custom-card-item">
-                        <div class="card custom-card">
-                            <img src="img/cat-3.jpg" class="card-img-top custom-card-img" alt="Loading Failed">
-                            <div class="card-body custom-card-body">
-                                <p class="card-text text-justify">Organized and intentional, non-formal education occurs
-                                    outside the traditional school system. It includes programs like adult education,
-                                    community-based learning, and vocational training, focusing on practical skills.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="custom-card-item">
-                        <div class="card custom-card">
-                            <img src="img/cat-4.jpg" class="card-img-top custom-card-img" alt="Loading Failed">
-                            <div class="card-body custom-card-body">
-                                <p class="card-text text-justify">Tailored to meet the unique needs of individuals with
-                                    disabilities or learning differences, special education provides personalized
-                                    instruction and support. It aims to ensure that all students have access to
-                                    education.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Education End -->
 
     <!-- Footer Start -->
     <div class="container-fluid text-light mb-0 footer wow fadeIn" data-wow-delay="0.1s">
@@ -378,8 +310,7 @@
     </div>
     <div class="footer-copyright text-light text-center py-3">
         <sup>©</sup> 2024 Copyright
-        <a class="text-reset fw-bold" href="https://abidallnafish.github.io/education.bd/"><b>Abid All
-                Nafish</b></a>
+        <a class="text-reset fw-bold" href="https://abidallnafish.github.io/education.bd/"><b>Abid All Nafish</b></a>
     </div>
     <!-- Footer End -->
 
